# Myactua_Ethercat

./: CMakeLists.txt  README.md  board.cpp
SOEM/: EthercatAdapterSOEM.cpp  EthercatAdapterSOEM.hpp  Motor.cpp  Motor.hpp
examples/: debug_tool.cpp  simple_test.cpp
include/myactua/: CiA402.hpp  EthercatAdapter.hpp  EthercatAdapterIGH.hpp  MotorTypes.hpp  motor_control.hpp
src/: CiA402.cpp  EthercatAdapterIGH.cpp  motor_control.cpp
